--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /Project/StudentM/nbproject/private/
 /Project/StudentM/build/
 /Project/mavenproject1/target/
+/Project/test1/target/
+/Project/foodD/target/
